--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,185 +1,193 @@
-/* =============================================================================
- *
- * Waybar configuration
- *
- * Configuration reference: https://github.com/Alexays/Waybar/wiki/Configuration
- *
- * =========================================================================== */
- 
-/* -----------------------------------------------------------------------------
- * Keyframes
- * -------------------------------------------------------------------------- */
-
-
-/*
-Polar Night
-nord0  #2e3440
-nord1  #3b4252
-nord2  #434c5e
-nord3  #4c566a
-Snow Storm
-nord4  #d8dee9
-nord5  #e5e9f0
-nord6  #eceff4
-Frost
-nord7  #8fbcbb
-nord8  #88c0d0
-nord9  #81a1c1
-nord10 #5e81ac
-Aurora
-nord11 #bf616a
-nord12 #d08770
-nord13 #ebcb8b
-nord14 #a3be8c
-nord15 #b48ead
-*/
-
-/* -----------------------------------------------------------------------------
- * Base styles
- * -------------------------------------------------------------------------- */
- 
-/* Reset all styles */
-
 * {
-    color: #eceff4;
-    border: 0;
-    border-radius: 0;
-    padding: 0 0;
-    font-family:Symbols Nerd Font Mono;
-    font-size: 15px;
-    margin-right: 5px;
-    margin-left: 5px;
-    padding-bottom:2px;
-   }
+    border: none;
+    font-family: "JetBrainsMono";
+    font-size: 14px;
+}
 
 window#waybar {
-    background:rgba (0, 0, 0, 0.5);
-    border-radius: 20px 20px 20px 20px; 
+
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #ffffff;
+    transition-property: background-color;
+    transition-duration: .5s;
+    border-radius: 10px;
+}
+
+window#waybar.hidden {
+    opacity: 0.2;
 }
 
 #workspaces button {
-    padding: 2px 0px;
-    border-bottom: 2px;
-    color: #eceff4;
-    border-color: #d8dee9;
-    border-style: solid;
-    margin-top:2px;
+    padding: 0px;
+    margin: 4px 0 6px 0;
+    background-color: transparent;
+    color: #ffffff;
+    min-width: 36px;
 }
 
 #workspaces button.active {
-    border-color: #81a1c1;
+    padding: 0 0 0 0;
+    margin: 4px 0 6px 0;
+    min-width: 36px;
 }
 
-#clock, #battery, #cpu, #memory,#idle_inhibitor, #temperature,#custom-keyboard-layout, #backlight, #network, #pulseaudio, #tray, #window,#custom-launcher,#custom-power,#custom-updates ,#custom-network_traffic,#custom-weather{
-    padding: 0 3px;
-    border-bottom: 2px;
-    border-style: solid;
+#workspaces button:hover {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 15px ;
 }
- 
-/* -----------------------------------------------------------------------------
- * Module styles
- * -------------------------------------------------------------------------- */
 
- 
+#workspaces button.focused {
+    background-color: #bbccdd;
+    color: #323232;
+}
+
+#workspaces button.urgent {
+    color: red;
+}
+
+
+#clock,
+#battery,
+#cpu,
+#memory,
+#temperature,
+#backlight,
+#network,
+#pulseaudio,
+#custom-keyboard-layout,
+#custom-network_traffic,
+#custom-media,
+#tray,
+#idle_inhibitor,
+#custom-power,
+#custom-updates,
+#language {
+    padding: 0px 3px;
+    margin: 4px 3px 5px 3px;
+    color: #ffffff;
+    background-color:transparent;
+}
+
+#window,
+#workspaces {
+    border : solid 1px white ;
+    border-radius: 100px;
+}
+
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces {
+    margin-left: 0;
+}
+
+/* If workspaces is the rightmost module, omit right margin */
+.modules-right > widget:last-child > #workspaces {
+    margin-right: 0;
+}
+
 #clock {
- color:#a3be8c;
-}
-
-#backlight {
-    color: #ebcb8b;
+    color: #90ee90;
 }
 
 #battery {
-    color: #d8dee9;
-}
-
-#battery.charging {
-    color: #81a1c1;
+    color: red;
 }
 
 @keyframes blink {
     to {
-        color: #4c566a;
-        background-color: #eceff4;
+        background-color: #ffffff;
+        color: #333333;
     }
 }
 
 #battery.critical:not(.charging) {
-    background: #bf616a;
-    color: #eceff4;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    background-color: #ff0000;
+    color:#ff0000 ;
+}
+
+label:focus {
+    background-color: #000000;
 }
 
 #cpu {
-    color:#a3be8c ;
+    color: #ff0000;
 }
 
 #memory {
-    color: #d3869b;
+    color: #00f98f;
 }
 
-#network.disabled {
-    color:#bf616a;
+#backlight {
+    color: cyan;
 }
 
-#network{
-    color:#a3be8c;
+#network {
+    color: #ff9e64;
 }
 
 #network.disconnected {
-    color: #bf616a;
+    color: #df3320;
 }
 
 #pulseaudio {
-    color: #b48ead;
+    color: orange;
 }
 
 #pulseaudio.muted {
-    color: #3b4252;
+    color: #a0a0a0;
+}
+
+#custom-power {
+    color: #0db9d7;
+}
+
+#custom-updates {
+    color: #b9f27c;
+}
+
+#custom-media {
+    background-color: #66cc99;
+    color: #2a5c45;
+    min-width: 100px;
+}
+
+#custom-media.custom-spotify {
+    background-color: #66cc99;
+}
+
+#custom-media.custom-vlc {
+    background-color: #ffa000;
 }
 
 #temperature {
-    color: #8fbcbb;
+    color: #0db9d7;
 }
 
 #temperature.critical {
-    color: #bf616a;
-}
-
-#idle_inhibitor {
-   color: #ebcb8b;
+    background-color: #ff0000;
 }
 
 #tray {
+    border : solid 1px blueviolet ;
+    border-radius : 30px;
 }
 
-#custom-launcher{
-        font-size: 20px;
-        background-image: url('/home/jr/.config/waybar/launcher.png');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        border-style: hidden;
+#idle_inhibitor {
+    background-color: #343434;
+    border-radius: 15px;
 }
-
-#custom-power{
-    border-style: hidden;
-    margin-top:2px;    
-}
-
-#window{
-    border-style: hidden;
-    margin-top:1px;  
-}    
 #custom-keyboard-layout{
-   color:#d08770;
-}   
+    color : red;
+}
+#custom-separator {
+    color: yellow;
+}
 #custom-network_traffic{
-   color:#d08770;
+    color : orange;
 }
 
+#custom-separator {
+    color: #606060;
+    margin: 0 1px;
+    padding-bottom: 5px;
+}
 
