--- a/nwg-drawer/.config/nwg-drawer/drawer.css
+++ b/nwg-drawer/.config/nwg-drawer/drawer.css
@@ -1,20 +1,29 @@
 window {
-    background-color: rgba(36, 47, 79, 0.95);
-    color: #eeeeee
+	border-radius: 10px;
+    background-color: rgba (0, 0, 0, 0.65);
+    color: #1d1f21
 }
 
 /* search entry */
 entry {
-    background-color: rgba (0, 0, 0, 0.2)
+    box-shadow: 0 0 6px 5px #2e3440;
+    background-color: rgba (0, 0, 0, 0.65)
 }
 
 button, image {
+    background-color: #FF2222;
     background: none;
-    border: none
+    border: none;
+    margin: 4px;
+
 }
 
 button:hover {
-    background-color: rgba (255, 255, 255, 0.1)
+    background-color: rgba (255, 0, 0, 0.2)
+}
+
+button:focus {
+    background-color: rgba (225, 0, 0, 0.3);
 }
 
 /* in case you wanted to give category buttons a different look */
@@ -31,10 +40,4 @@ button:hover {
     padding: 5px;
     border: 1px dotted gray;
     border-radius: 15px
-}
-
-/* math operation result label */
-#math-label {
-    font-weight: bold;
-    font-size: 16px
 }
